# opencv-mobile

./: README.md  opencv5_cmake_options.txt
.github/workflows/: release.yml
patches/: opencv-5.0.0-drawing-mono-font.patch  opencv-5.0.0-fix-msvc-asm.patch  opencv-5.0.0-fix-static-world-config.patch  opencv-5.0.0-fix-windows-arm-arch.patch  opencv-5.0.0-link-openmp.patch  opencv-5.0.0-minimal-install.patch  opencv-5.0.0-no-atomic.patch  opencv-5.0.0-no-flann.patch  opencv-5.0.0-no-gpu.patch  opencv-5.0.0-no-ptcloud.patch  opencv-5.0.0-no-rtti.patch  opencv-5.0.0-no-zlib.patch  opencv-5.0.0-unsafe-xadd.patch
test/: CMakeLists.txt
